--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,30 @@ certifi==2023.11.17
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.0
 cookiecutter==2.5.0
+cycler==0.12.1
 Django==5.0
+django-admin-argon-dashboard==1.0.16
 django-browser-reload==1.12.1
 django-tailwind==3.6.0
+django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
+fonttools==4.47.0
 idna==3.6
 Jinja2==3.1.2
+kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 mdurl==0.1.2
+packaging==23.2
+Pillow==10.1.0
 Pygments==2.17.2
+pyparsing==3.1.1
 python-dateutil==2.8.2
 python-slugify==8.0.1
+pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.0
@@ -25,4 +37,5 @@ sqlparse==0.4.4
 text-unidecode==1.3
 types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.1.0
